Remove final Android 10-incompatible String.isBlank call